--- a/App.xaml
+++ b/App.xaml
@@ -3,12 +3,16 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MauiCalculator"
              x:Class="MauiCalculator.App">
+
     <Application.Resources>
         <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
-                <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
-            </ResourceDictionary.MergedDictionaries>
+            <Style TargetType="Frame">
+                <Setter Property="BackgroundColor" Value="{DynamicResource ToolsBackground}" />
+            </Style>
+
+            <Style TargetType="Label">
+                <Setter Property="TextColor" Value="{DynamicResource Foreground}" />
+            </Style>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
