--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -4,6 +4,8 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:MauiCalculator"
+    x:DataType="Shell"
+    Shell.BackgroundColor="{DynamicResource Background}"
     Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
