--- a/Resources/Themes/Light.xaml
+++ b/Resources/Themes/Light.xaml
@@ -3,8 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiCalculator.Resources.Styles.Light">
 
-    <Color x:Key="Background">#FFFFFF</Color>
-    <Color x:Key="ToolsBackground">#F9F9F9</Color>
+	<Color x:Key="Background">#FFFFFF</Color>
+	<Color x:Key="ToolsBackground">#F9F9F9</Color>
 
-    <Color x:Key="Foreground">#2E3138</Color>
+	<Color x:Key="Foreground">#2E3138</Color>
+
+	<Color x:Key="Sunny">#000000</Color>
+	<Color x:Key="Moon">#E6E6E6</Color>
 </ResourceDictionary>
