--- a/Resources/Themes/Dark.xaml
+++ b/Resources/Themes/Dark.xaml
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MauiCalculator.Resources.Styles.Dark">
+<ResourceDictionary
+	xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+  xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+  x:Class="MauiCalculator.Resources.Styles.Dark">
 
-    <Color x:Key="Background">#22252D</Color>
-    <Color x:Key="ToolsBackground">#2A2D37</Color>
+	<Color x:Key="Background">#22252D</Color>
+	<Color x:Key="ToolsBackground">#2A2D37</Color>
+	<Color x:Key="CalculatorButtonBackground">#282B33</Color>
 
-    <Color x:Key="Foreground">#CED1D3</Color>
+	<Color x:Key="Foreground">#CED1D3</Color>
 
 	<Color x:Key="Sunny">#6F7079</Color>
 	<Color x:Key="Moon">#FFFFFF</Color>
