--- a/Resources/Themes/Light.xaml
+++ b/Resources/Themes/Light.xaml
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MauiCalculator.Resources.Styles.Light">
+<ResourceDictionary
+	xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+  xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+  x:Class="MauiCalculator.Resources.Styles.Light">
 
 	<Color x:Key="Background">#FFFFFF</Color>
 	<Color x:Key="ToolsBackground">#F9F9F9</Color>
+	<Color x:Key="CalculatorButtonBackground">#F7F7F6</Color>
 
-	<Color x:Key="Foreground">#2E3138</Color>
+	<Color x:Key="Foreground">#000</Color>
 
 	<Color x:Key="Sunny">#000000</Color>
 	<Color x:Key="Moon">#E6E6E6</Color>
